Fixed small responsive issues related with paddings and gap

--- a/src/componets/App/App.css
+++ b/src/componets/App/App.css
@@ -33,12 +33,11 @@
 @media screen and (max-width: 768px) {
     .AppContainer {
         max-width: 95%;
-        margin-top: 1rem;
         padding: 20px 30px 0px 30px;
+        margin-top: 12%;
     }
 
     .AppContainer__info {
-        padding: 30px;
+        padding: 30px 0;
     }
-  
  }
